PR/48502: M. Levinson: vi(1) no longer moves the cursor when yanking text using a mark (remove dangling else)